# TadoLocal

./: .gitignore  pyproject.toml
tado_local/: __main__.py  api.py  bridge.py  cloud.py  routes.py  state.py  sync.py  zeroconf_register.py
tests/: test_migration.py  test_zeroconf_register.py
